[gd_scene load_steps=6 format=1]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://player/player.png" type="Texture" id=2]
[ext_resource path="res://tools/pick.png" type="Texture" id=3]
[ext_resource path="res://tools/ladder.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]

animations = [ { "frames":[ ExtResource( 3 ), ExtResource( 4 ) ], "loop":true, "name":"default", "speed":5.0 } ]

[node name="player" type="KinematicBody2D"]

input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="check_down" type="RayCast2D" parent="."]

transform/pos = Vector2( 0, 128 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 16 )
layer_mask = 1
type_mask = 15

[node name="check_up" type="RayCast2D" parent="."]

transform/pos = Vector2( 0, -128 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, -16 )
layer_mask = 1
type_mask = 15

[node name="check_right" type="RayCast2D" parent="."]

transform/pos = Vector2( 128, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 16, 0 )
layer_mask = 1
type_mask = 15

[node name="check_left" type="RayCast2D" parent="."]

transform/pos = Vector2( -128, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( -16, 0 )
layer_mask = 1
type_mask = 15

[node name="check_current" type="RayCast2D" parent="."]

enabled = true
exclude_parent = true
cast_to = Vector2( -16, 0 )
layer_mask = 1
type_mask = 15

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = 0
limit/right = 10000000
limit/bottom = 10000000
limit/smoothed = false
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="tools" type="AnimatedSprite" parent="."]

frames = SubResource( 1 )
animation = "default"


